stil eklendi finis ayni

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
     <div class="conteiner1">
-        <h1 class="baslik">DAMLA SUT VE SUT URUNLERI</h1>
+        <div class="bas">
+            <img id="ss" src="./images/ss.png" alt="ss">
+            <div class="baslik">DAMLA SUT VE SUT URUNLERI</div>
+        </div>
         <ul class="linksone">
-            <li><a href="./pages/about.html">Hakkımızda</a></li>
-            <li><a href="#">İletişim</a></li>
+            <li id="li1"><a href="./pages/about.html">Hakkımızda</a></li>
+            <li id="li1"><a href="#">İletişim</a></li>
         </ul>
     </div>
     <div class="conteiner2">
         <div class="sol">
-            <p id="b">Siz en kalitelisine layıksınız...</p>
-            <P id="k">Bu yüzden en kaliteli süt ve süt ürünlerini sağlayabilmek için elimizden gelenin en iyisini yapıyoruz</P>
+            <p id="b">EN KALİTELİSİNE LAYIKISIZ...</p>
+            <p id="k">İşte Tam Olarak Bu Yüzden En Kaliteli Süt Ve Süt Ürünlerini Sağlayabilmek İçin <br> Elimizden Gelenin En İyisini Yapıyoruz</p>
         </div>
         <div class="sag">
             <img id="inek" src="./images/inel.jpeg" alt="ineks">
@@ -29,22 +32,22 @@
         <ul class="linkstwo">
             <li class="item">
                 <img id="svsu" src="./images/süt.jpeg" alt="süt">
-                <p id="kg">1 KG --> 22₺ <br> 5 KG --> 100₺</p>
+                <p id="kg">1 KG Süt --> 22₺ <br> 5 KG Süt --> 100₺</p>
             </li>
-            <li>
+            <li class="item">
                 <img id="svsu" src="./images/yogurt.jpeg" alt="yogurt">
-                <p id="kg">1 KG --> 11₺ <br> 5 KG --> 50₺</p>
+                <p id="kg">1 KG Yoğurt --> 11₺ <br> 5 KG Yoğurt --> 50₺</p>
             </li>
-            <li>
+            <li class="item">
                 <img id="svsu" src="./images/peynir.jpeg" alt="peynir">
-                <p id="kg">1 KG Tulum --> 42₺ <br> 5 KG Tulum --> 200₺</p>
-                <p id="kg">1 KG Kaşar --> 62₺ <br> 5 KG Kaşar --> 300₺</p>
+                <p id="kg">1 KG Peynir --> 42₺ <br> 5 KG Peynir --> 200₺</p>
             </li>
-            <li>
+            <li class="item">
                 <img id="svsu" src="./images/ayran.jpeg" alt="ayran">
-                <p id="kg">330 ml --> 4.50₺ <br> 1 LT --> 10₺</p>
+                <p id="kg">330 ml Ayran --> 4.50₺ <br> 1 LT Ayran --> 10₺</p>
             </li>
         </ul>
+        <button>Siparis Ver 🛒</button>
     </div>
     
 </body>
